--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en" class="no-js" ng-app="EinkommenApp">
 <head>
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Unterhaltsrechner</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- http://bootswatch.com/ -->
+    <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap.css" >
+    <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap-responsive.css" >
 </head>
-<body>
+<!--[if lt IE 9]><p class=chromeframe>Ihr Browser ist <em>uralt!</em>
+    <a href="http://browsehappy.com/">Installieren Sie sich einen neueren Browser</a> oder
+    <a href="http://www.google.com/chromeframe/?redirect=true">Google Chrome Frame</a>, um diese Seite zu benutzen.</p><![endif]-->
+<body ng-controller="RechnerCtrl">
+    <div ng-view></div>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.js"></script>
+    <script type="text/javascript">
 
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-36034286-1']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
+    </script>
 </body>
 </html>
