--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!-- http://bootswatch.com/ -->
     <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap.css" >
     <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap-responsive.css" >
+    <style type="text/css">
+        body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+        }
+    </style>
 </head>
 <!--[if lt IE 9]><p class=chromeframe>Ihr Browser ist <em>uralt!</em>
     <a href="http://browsehappy.com/">Installieren Sie sich einen neueren Browser</a> oder
