--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.js"></script>
+    <script type="text/javascript" src="https://raw.github.com/jhollingworth/bootstrap-wysihtml5/master/src/bootstrap-wysihtml5.js"></script>
+    <script type="text/javascript" src="https://raw.github.com/jhollingworth/bootstrap-wysihtml5/master/src/bootstrap-wysihtml5.css"></script>
+    <script type="text/javascript" src="https://raw.github.com/xing/wysihtml5/master/dist/wysihtml5-0.4.0pre.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
