--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 </a>
                 <a class="brand" href="#">Project name</a>
                 <div class="nav-collapse collapse">
-                    <p class="navbar-text pull-right">
-                        Logged in as <a href="#" class="navbar-link">Username</a>
+                    <p class="navbar-text pull-right"><img src="ajax-loader.gif" ng-show="inprogress()">
                     </p>
                     <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
@@ -68,9 +67,7 @@
         <hr>
 
         <footer>
-
-
-
+            </footer>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
