--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#">Project name</a>
+                <a class="brand" href="#">Zeit API Browser</a>
                 <div class="nav-collapse collapse">
                     <p class="navbar-text pull-right"><img src="ajax-loader.gif" ng-show="inprogress()">
                     </p>
                     <ul class="nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li class="active"><a href="#">Suche</a></li>
+                        <li><a href="#articles">Letzte Suchergebnisse</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -48,11 +47,9 @@
             <div class="span3">
                 <div class="well sidebar-nav">
                     <ul class="nav nav-list">
-                        <li class="nav-header">Sidebar</li>
+                        <li class="nav-header">Recherche</li>
                         <li class="active">
                         <li><a href="#">Artikel finden</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
                     </ul>
                 </div><!--/.well -->
             </div><!--/span-->
